--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ background:#22c55e;
 <div class="card" id="card" >
 <div id="capture">
 
-<img src="Logo.png" class="logo">
+<img src="Logo.jpg" class="logo">
 
 <div class="title">رمضان مبارك</div>
 
