--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>تهنئة رمضان</title>
 
-<title>تهنئة رمضان | وحدة الرياض</title>
-
-<!-- خطوط -->
 <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Ink&family=Tajawal:wght@400;700;900&display=swap" rel="stylesheet">
-
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
 <style>
@@ -23,7 +20,7 @@ justify-content:center;
 color:white;
 }
 
-/* صفحة الادخال */
+/* صفحة الإدخال */
 #formPage{
 text-align:center;
 }
@@ -34,7 +31,6 @@ width:260px;
 border:none;
 border-radius:10px;
 font-size:18px;
-margin-top:10px;
 text-align:center;
 }
 
@@ -49,10 +45,6 @@ color:white;
 cursor:pointer;
 }
 
-button:hover{
-background:#12a96b;
-}
-
 /* صفحة التهنئة */
 #cardPage{
 display:none;
@@ -60,58 +52,55 @@ flex-direction:column;
 align-items:center;
 }
 
-/* مربع البوست */
+/* مربع التهنئة (اصغر) */
 .card{
-width:700px;
-height:700px;
+width:500px;
+height:500px;
 background:linear-gradient(180deg,#1b4fa3,#0c2d63);
-border-radius:30px;
+border-radius:25px;
 position:relative;
-box-shadow:0 30px 80px rgba(0,0,0,0.5);
-padding:60px 40px;
+box-shadow:0 25px 70px rgba(0,0,0,0.5);
+padding:50px 30px;
 text-align:center;
 }
 
 /* الشعار */
 .logo{
 position:absolute;
-top:25px;
-right:25px;
-width:220px;
+top:20px;
+right:20px;
+width:160px;
 }
 
 /* رمضان مبارك */
 .title{
 font-family:'Reem Kufi Ink',sans-serif;
-font-size:65px;
+font-size:48px;
 font-weight:900;
-margin-top:60px;
-margin-bottom:30px;
-background: linear-gradient(90deg,#ffffff,#7cd2ff,#ffffff);
+margin-top:50px;
+margin-bottom:20px;
+background: linear-gradient(90deg,#fff,#7cd2ff,#fff);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
-text-shadow:0 6px 20px rgba(0,0,0,0.5);
-letter-spacing:2px;
 }
 
-/* نص */
+/* النص */
 .text{
-font-size:22px;
+font-size:18px;
 line-height:2;
-margin-bottom:20px;
 }
 
-/* اسم */
+/* الاسم */
 .name{
-font-size:28px;
+font-size:22px;
 font-weight:bold;
 color:#7cd2ff;
-margin-top:25px;
+margin-top:20px;
 }
 
-/* حفظ */
+/* زر حفظ */
 #saveBtn{
-margin-top:25px;
+margin-top:20px;
 background:#19c37d;
 }
 </style>
@@ -119,18 +108,19 @@ background:#19c37d;
 
 <body>
 
-<!-- صفحة الادخال -->
+<!-- إدخال الاسم -->
 <div id="formPage">
 <h2>اكتب الاسم لعرض التهنئة</h2>
-<input type="text" id="username" placeholder="اكتب الاسم هنا">
+<input type="text" id="username" placeholder="اكتب الاسم">
 <br>
 <button onclick="showCard()">عرض التهنئة</button>
 </div>
 
-<!-- صفحة التهنئة -->
+<!-- التهنئة -->
 <div id="cardPage">
 <div class="card" id="capture">
 
+<!-- حط اسم الشعار هنا -->
 <img src="Logo.png" class="logo">
 
 <div class="title">رمضان مبارك</div>
@@ -151,8 +141,9 @@ background:#19c37d;
 <script>
 function showCard(){
 let name=document.getElementById("username").value;
+
 if(name.trim()==""){
-alert("اكتب الاسم أول");
+alert("اكتب الاسم");
 return;
 }
 
