--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ display:none;
 <div class="card" id="card">
 
 <!-- الشعار -->
-<img src="logo.png" class="logo" onerror="this.style.display='none'">
+<img src="Logo.png" class="logo" onerror="this.style.display='none'">
 
 <div class="ramadan-title">رمضان مبارك</div>
 
@@ -140,7 +140,7 @@ display:none;
 
 <div class="name" id="nameText"></div>
 
-<img src="mosque.png" class="mosque">
+<img src="new-mosque.png" class="mosque">
 
 </div>
 
