--- a/index.html
+++ b/index.html
@@ -3,62 +3,61 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>تهنئة رمضان</title>
 
-<!-- خطوط مزخرفة فخمة -->
-<link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400;700&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+<!-- خط مزخرف -->
+<link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@700&display=swap" rel="stylesheet">
 
 <style>
 
 body{
 margin:0;
-font-family:'Cairo',sans-serif;
-background:linear-gradient(135deg,#0c2d63,#154a9a);
+font-family:Tahoma;
+background:linear-gradient(180deg,#0c2d63,#0a1f45);
 height:100vh;
 display:flex;
 justify-content:center;
 align-items:center;
 flex-direction:column;
-color:white;
 }
 
-/* صفحة البداية */
+/* صفحة الإدخال */
 .start{
 text-align:center;
 }
 
 .start input{
-padding:14px;
-width:260px;
-border-radius:10px;
+padding:12px;
+width:220px;
+border-radius:8px;
 border:none;
-font-size:16px;
 margin-top:10px;
-text-align:center;
+font-size:16px;
 }
 
 .start button{
-margin-top:10px;
-padding:12px 30px;
+padding:12px 25px;
 border:none;
-border-radius:10px;
-background:#00c3ff;
-color:#fff;
+background:#1bb6ff;
+color:white;
+border-radius:8px;
 font-size:16px;
+margin-top:10px;
 cursor:pointer;
 }
 
-/* كرت التهنئة مربع */
+/* كرت التهنئة */
 .card{
 display:none;
-width:480px;
-height:480px;
-background:linear-gradient(180deg,#1b4fa8,#0c2d63);
-border-radius:30px;
-padding:40px 25px;
-text-align:center;
+width:500px;
+height:500px;
+background:radial-gradient(circle at top,#1e4fa3,#0a2a63);
+border-radius:25px;
+box-shadow:0 0 40px rgba(0,0,0,0.5);
 position:relative;
-box-shadow:0 25px 70px rgba(0,0,0,0.5);
+text-align:center;
+padding-top:40px;
 }
 
 /* الشعار */
@@ -71,46 +70,49 @@ width:130px;
 
 /* عنوان رمضان مزخرف */
 .ramadan-title{
-font-family:'Reem Kufi Fun',cursive;
-font-size:60px;
-margin-top:40px;
-color:#ffffff;
-text-shadow:0 0 25px rgba(255,255,255,0.7);
+font-family:'Aref Ruqaa',serif;
+font-size:55px;
+color:#fff;
+text-align:center;
+margin-top:30px;
+letter-spacing:2px;
+text-shadow:0 0 10px rgba(255,255,255,0.8),
+           0 0 30px rgba(0,200,255,0.6);
 }
 
 /* النص */
 .text{
-margin-top:15px;
+color:white;
+margin-top:20px;
 line-height:2;
 font-size:18px;
-color:#eaf6ff;
 }
 
 /* الاسم */
 .name{
-margin-top:18px;
-font-size:26px;
-color:#7fe0ff;
+margin-top:20px;
+font-size:28px;
+color:#7de3ff;
 font-weight:bold;
 }
 
-/* صورة رمضان */
+/* صورة المسجد */
 .mosque{
-width:200px;
-margin-top:25px;
+width:230px;
+margin-top:20px;
+opacity:0.95;
 }
 
-/* زر حفظ */
-.saveBtn{
-margin-top:25px;
-padding:14px 35px;
+/* زر الحفظ */
+.save{
+margin-top:20px;
+padding:12px 30px;
 border:none;
-border-radius:12px;
-background:#00c3ff;
-color:#fff;
+background:#19c2ff;
+color:white;
 font-size:16px;
+border-radius:10px;
 cursor:pointer;
-display:none;
 }
 
 </style>
@@ -118,19 +120,20 @@ display:none;
 
 <body>
 
+<!-- صفحة البداية -->
 <div class="start" id="startPage">
-<h2>اكتب اسمك لعرض التهنئة</h2>
-<input type="text" id="username" placeholder="اكتب الاسم هنا">
+<h2 style="color:white">اكتب اسمك لعرض التهنئة</h2>
+<input type="text" id="username" placeholder="اكتب اسمك">
 <br>
 <button onclick="showCard()">عرض التهنئة</button>
 </div>
 
+<!-- كرت التهنئة -->
 <div class="card" id="card">
 
-<!-- الشعار -->
-<img src="Logo.png" class="logo" onerror="this.style.display='none'">
+<img src="Logo.png" class="logo">
 
-<div class="ramadan-title">رمضان مبارك</div>
+<div class="ramadan-title">﷽ رمضان مبارك ✦</div>
 
 <div class="text">
 نسأل الله أن يجعله شهر خير وبركة<br>
@@ -144,31 +147,38 @@ display:none;
 
 </div>
 
-<button class="saveBtn" id="saveBtn" onclick="saveImage()">حفظ كصورة</button>
+<button class="save" onclick="saveImage()" id="saveBtn" style="display:none">
+حفظ كصورة
+</button>
 
+<!-- مكتبة تصوير -->
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
 <script>
+
 function showCard(){
 let name=document.getElementById("username").value;
 if(name==""){
-alert("اكتب الاسم أول");
+alert("اكتب الاسم");
 return;
 }
-document.getElementById("nameText").innerText=name;
+
 document.getElementById("startPage").style.display="none";
 document.getElementById("card").style.display="block";
 document.getElementById("saveBtn").style.display="block";
+
+document.getElementById("nameText").innerText=name;
 }
 
 function saveImage(){
 html2canvas(document.getElementById("card")).then(canvas=>{
 let link=document.createElement("a");
-link.download="ramadan-card.png";
+link.download="ramadan.png";
 link.href=canvas.toDataURL();
 link.click();
 });
 }
+
 </script>
 
 </body>
