--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>تهنئة رمضان</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@700&display=swap" rel="stylesheet">
+<!-- خطوط مزخرفة فخمة -->
+<link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400;700&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 
 body{
 margin:0;
-font-family:Tahoma;
-background:linear-gradient(180deg,#0c2d63,#0a1f45);
+font-family:'Cairo',sans-serif;
+background:linear-gradient(135deg,#0c2d63,#154a9a);
 height:100vh;
 display:flex;
 justify-content:center;
 align-items:center;
 flex-direction:column;
+color:white;
 }
 
 /* صفحة البداية */
@@ -26,90 +28,89 @@ text-align:center;
 }
 
 .start input{
-padding:12px;
-width:220px;
-border-radius:8px;
+padding:14px;
+width:260px;
+border-radius:10px;
 border:none;
-margin-top:10px;
 font-size:16px;
+margin-top:10px;
+text-align:center;
 }
 
 .start button{
-padding:12px 25px;
-border:none;
-background:#1bb6ff;
-color:white;
-border-radius:8px;
-font-size:16px;
 margin-top:10px;
+padding:12px 30px;
+border:none;
+border-radius:10px;
+background:#00c3ff;
+color:#fff;
+font-size:16px;
 cursor:pointer;
 }
 
-/* كرت التهنئة */
+/* كرت التهنئة مربع */
 .card{
 display:none;
 width:480px;
 height:480px;
-background:radial-gradient(circle at top,#1e4fa3,#0a2a63);
-border-radius:25px;
-box-shadow:0 0 40px rgba(0,0,0,0.5);
-position:relative;
+background:linear-gradient(180deg,#1b4fa8,#0c2d63);
+border-radius:30px;
+padding:40px 25px;
 text-align:center;
-padding:30px 20px;
-overflow:hidden;
+position:relative;
+box-shadow:0 25px 70px rgba(0,0,0,0.5);
 }
 
 /* الشعار */
 .logo{
 position:absolute;
-top:18px;
+top:20px;
 right:20px;
-width:120px;
+width:130px;
 }
 
-/* رمضان مبارك مزخرفة */
+/* عنوان رمضان مزخرف */
 .ramadan-title{
-font-family:'Aref Ruqaa',serif;
-font-size:50px;
-color:#fff;
-margin-top:20px;
-text-shadow:0 0 10px rgba(255,255,255,0.9),
-           0 0 30px rgba(0,200,255,0.6);
+font-family:'Reem Kufi Fun',cursive;
+font-size:60px;
+margin-top:40px;
+color:#ffffff;
+text-shadow:0 0 25px rgba(255,255,255,0.7);
 }
 
 /* النص */
 .text{
-color:white;
 margin-top:15px;
 line-height:2;
-font-size:17px;
+font-size:18px;
+color:#eaf6ff;
 }
 
 /* الاسم */
 .name{
 margin-top:18px;
 font-size:26px;
-color:#7de3ff;
+color:#7fe0ff;
 font-weight:bold;
 }
 
-/* صورة المسجد */
+/* صورة رمضان */
 .mosque{
 width:200px;
-margin-top:15px;
-opacity:0.95;
+margin-top:25px;
 }
 
-/* زر الحفظ */
-.save{
-margin-top:20px;
-padding:12px 30px;
+/* زر حفظ */
+.saveBtn{
+margin-top:25px;
+padding:14px 35px;
 border:none;
-background:#19c2ff;
-color:white;
+border-radius:12px;
+background:#00c3ff;
+color:#fff;
 font-size:16px;
-border-radius:10px;
 cursor:pointer;
+display:none;
 }
 
 </style>
@@ -117,18 +118,17 @@ cursor:pointer;
 
 <body>
 
-<!-- صفحة إدخال الاسم -->
 <div class="start" id="startPage">
-<h2 style="color:white">اكتب اسمك لعرض التهنئة</h2>
-<input type="text" id="username" placeholder="اكتب اسمك">
+<h2>اكتب اسمك لعرض التهنئة</h2>
+<input type="text" id="username" placeholder="اكتب الاسم هنا">
 <br>
 <button onclick="showCard()">عرض التهنئة</button>
 </div>
 
-<!-- كرت التهنئة -->
 <div class="card" id="card">
 
-<img src="Logo.png" class="logo">
+<!-- الشعار -->
+<img src="logo.png" class="logo" onerror="this.style.display='none'">
 
 <div class="ramadan-title">رمضان مبارك</div>
 
@@ -140,41 +140,35 @@ cursor:pointer;
 
 <div class="name" id="nameText"></div>
 
-<img src="new-mosque.png" class="mosque">
+<img src="mosque.png" class="mosque">
 
 </div>
 
-<button class="save" onclick="saveImage()" id="saveBtn" style="display:none">
-حفظ كصورة
-</button>
+<button class="saveBtn" id="saveBtn" onclick="saveImage()">حفظ كصورة</button>
 
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
 <script>
-
 function showCard(){
 let name=document.getElementById("username").value;
 if(name==""){
-alert("اكتب الاسم");
+alert("اكتب الاسم أول");
 return;
 }
-
+document.getElementById("nameText").innerText=name;
 document.getElementById("startPage").style.display="none";
 document.getElementById("card").style.display="block";
 document.getElementById("saveBtn").style.display="block";
-
-document.getElementById("nameText").innerText=name;
 }
 
 function saveImage(){
 html2canvas(document.getElementById("card")).then(canvas=>{
 let link=document.createElement("a");
-link.download="ramadan.png";
+link.download="ramadan-card.png";
 link.href=canvas.toDataURL();
 link.click();
 });
 }
-
 </script>
 
 </body>
