--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ display:none;
 
 <div class="name" id="nameText"></div>
 
-<img src="mosque.png" class="mosque">
+<img src="new-mosque.png" class="mosque">
 
 </div>
 
