--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>تهنئة رمضان</title>
 
-<!-- خطوط مزخرفة فخمة -->
-<link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400;700&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+<!-- خطوط فخمة -->
+<link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@700&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 
@@ -23,9 +23,7 @@ color:white;
 }
 
 /* صفحة البداية */
-.start{
-text-align:center;
-}
+.start{text-align:center;}
 
 .start input{
 padding:14px;
@@ -51,53 +49,54 @@ cursor:pointer;
 /* كرت التهنئة مربع */
 .card{
 display:none;
-width:480px;
-height:480px;
+width:420px;
+height:420px;
 background:linear-gradient(180deg,#1b4fa8,#0c2d63);
 border-radius:30px;
-padding:40px 25px;
+padding:35px 20px;
 text-align:center;
 position:relative;
 box-shadow:0 25px 70px rgba(0,0,0,0.5);
+overflow:hidden;
 }
 
 /* الشعار */
 .logo{
 position:absolute;
-top:20px;
-right:20px;
-width:130px;
+top:18px;
+right:18px;
+width:120px;
 }
 
-/* عنوان رمضان مزخرف */
+/* رمضان مبارك مزخرفة */
 .ramadan-title{
-font-family:'Reem Kufi Fun',cursive;
-font-size:60px;
-margin-top:40px;
+font-family:'Aref Ruqaa',serif;
+font-size:55px;
+margin-top:35px;
 color:#ffffff;
-text-shadow:0 0 25px rgba(255,255,255,0.7);
+text-shadow:0 0 20px rgba(255,255,255,0.8);
 }
 
 /* النص */
 .text{
-margin-top:15px;
+margin-top:10px;
 line-height:2;
-font-size:18px;
+font-size:17px;
 color:#eaf6ff;
 }
 
 /* الاسم */
 .name{
-margin-top:18px;
+margin-top:15px;
 font-size:26px;
 color:#7fe0ff;
 font-weight:bold;
 }
 
-/* صورة رمضان */
+/* صورة المسجد */
 .mosque{
-width:200px;
-margin-top:25px;
+width:170px;
+margin-top:18px;
 }
 
 /* زر حفظ */
