--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@ display:none;
 <div class="card" id="card">
 
 <!-- الشعار -->
-<img src="L
-  ogo.png" class="logo" onerror="this.style.display='none'">
+<img src="Logo.png" class="logo" onerror="this.style.display='none'">
 
 <div class="ramadan-title">رمضان مبارك</div>
 
