--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ font-weight:bold;
 </div>
 
 <div class="card" id="card">
-<img src="ramadan.jpg">
+<img src="ramadan.JPG">
 <div class="name" id="nameText"></div>
 </div>
 
